--- a/demo/pages/custom-theme.html
+++ b/demo/pages/custom-theme.html
@@ -8,10 +8,13 @@
   <link rel="stylesheet" href="../assets/style.css" />
   <script src="../assets/menu.js"></script>
 
-  <!-- first import Vue -->
-  <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
-  <script src="../assets/vue.js"></script>
+  <!-- Vue -->
+  <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script>
+
+  <!-- Liquor Tree -->
+  <link rel="stylesheet" href="/liquor-tree.css" />
   <script src="/liquor-tree.umd.js"></script>
+
   <!-- <script src="../assets/data/devdocs-menu.js"></script> -->
 
   <style>
@@ -146,7 +149,7 @@
               <span class="release"> {{ node.data.release }} </span>
             </template>
           </div>
-        </tree>
+          </tree>
       </div>
     </div>
     <div class="content">
