--- a/demo/pages/sorting.html
+++ b/demo/pages/sorting.html
@@ -8,9 +8,11 @@
   <link rel="stylesheet" href="../assets/style.css" />
   <script src="../assets/menu.js"></script>
 
-  <!-- first import Vue -->
-  <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
-  <script src="../assets/vue.js"></script>
+  <!-- Vue -->
+  <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script>
+
+  <!-- Liquor Tree -->
+  <link rel="stylesheet" href="/liquor-tree.css" />
   <script src="/liquor-tree.umd.js"></script>
 
   <style>
@@ -90,7 +92,7 @@
               <span class="node-text">{{ node.text }}</span>
               <div class="node-score">{{ node.data.score }}</div>
             </div>
-          </tree>
+            </tree>
         </div>
       </div>
     </div>
