--- a/demo/pages/dnd.html
+++ b/demo/pages/dnd.html
@@ -8,9 +8,11 @@
   <link rel="stylesheet" href="../assets/style.css" />
   <script src="../assets/menu.js"></script>
 
-  <!-- first import Vue -->
-  <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
-  <script src="../assets/vue.js"></script>
+  <!-- Vue -->
+  <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script>
+
+  <!-- Liquor Tree -->
+  <link rel="stylesheet" href="/liquor-tree.css" />
   <script src="/liquor-tree.umd.js"></script>
 
   <style>
@@ -39,7 +41,7 @@
         <div class="example-tree">
           <liquor-tree :data="treeData3" :options="treeOptions3">
             <div class="tree-scope" slot-scope="{ node }">- {{ node.text }} -</div>
-          </tree>
+            </tree>
         </div>
       </div>
 
@@ -51,7 +53,7 @@
         <div class="example-tree">
           <liquor-tree :data="treeData3" :options="treeOptions3">
             <div class="tree-scope" slot-scope="{ node }">- {{ node.text }} -</div>
-          </tree>
+            </tree>
         </div>
       </div>
     </div>
