--- a/demo/pages/filtering.html
+++ b/demo/pages/filtering.html
@@ -8,9 +8,11 @@
   <link rel="stylesheet" href="../assets/style.css" />
   <script src="../assets/menu.js"></script>
 
-  <!-- first import Vue -->
-  <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
-  <script src="../assets/vue.js"></script>
+  <!-- Vue -->
+  <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script>
+
+  <!-- Liquor Tree -->
+  <link rel="stylesheet" href="/liquor-tree.css" />
   <script src="/liquor-tree.umd.js"></script>
 
   <style>
@@ -61,7 +63,7 @@
               <span class="node-name">{{ node.text }}</span>
               <span class="node-complexity">{{ node.data.complexity }}</span>
             </div>
-          </tree>
+            </tree>
         </div>
       </div>
 
