--- a/demo/pages/vuex.html
+++ b/demo/pages/vuex.html
@@ -8,10 +8,12 @@
   <link rel="stylesheet" href="../assets/style.css" />
   <script src="../assets/menu.js"></script>
 
-  <!-- first import Vue -->
-  <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
-  <script src="../assets/vue.js"></script>
+  <!-- Vue -->
+  <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script>
   <script src="https://unpkg.com/vuex@3.6.2/dist/vuex.js"></script>
+
+  <!-- Liquor Tree -->
+  <link rel="stylesheet" href="/liquor-tree.css" />
   <script src="/liquor-tree.umd.js"></script>
 
   <style>
@@ -32,7 +34,7 @@
         <div class="example-description">Tree Module "A". Synchronizes with the neighbor (-------->) </div>
         <div class="example-tree">
           <liquor-tree v-if="!loading" :options="treeOptions1" ref="tree"> </tree>
-          <div v-else style="padding: 20px">Loading...</div>
+            <div v-else style="padding: 20px">Loading...</div>
         </div>
       </div>
 
